more or less the new website

--- a/newsite/company_portfolio_backend_big_data.html
+++ b/newsite/company_portfolio_backend_big_data.html
@@ -65,7 +65,7 @@
 						<ul class="dropdown-menu" role="menu">
 							<li><a href="products_access_control.html">Access Control</a></li>
 							<li><a href="products_industry_4.html">Industry 4.0</a></li>
-							<li><a href="products_packaging_ar.html">Packaging AR</a></li>
+
 						</ul>
 					</li>
 
@@ -78,8 +78,8 @@
 									<li><a href="company_portfolio_cloud_system_biomedical.html">Cloud System for Biomedical IoT</a></li>
 									<li><a href="company_portfolio_smart_supermarket.html">Smart SuperMarket</a></li>
 									<li><a href="company_portfolio_micropayments_charities.html">Micropayment app for charities</a></li>											
-									<li><a href="project.html">Project 1</a></li>
-									<li><a href="company_portfolio_warehouse_logistics_management.html">Warehouse logistic management software</a></li>
+									<li><a href="company_portfolio_smart_access_control.html">Smart Access Control System</a></li>
+									<li><a href="company_portfolio_warehouse_logistics_management.html">Warehouse logistic management SW</a></li>
 									<li><a href="company_portfolio_web_mobile_marketplace.html">Web & Mobile Marketplace</a></li>
 									<li><a href="company_portfolio_backend_big_data.html">Backend for BigData Analysis</a></li>
 									<li><a href="company_portfolio_realtime_mobile_voting.html">Realtime Mobile Voting System</a></li>
@@ -92,13 +92,17 @@
 									
 								</ul>
 							</li>
-							<li><a href="company_company_profile.html">Company Profile</a></li>
+							<li><a href="company_about.html">About</a></li>
 							<li><a href="company_company_recruitment.html">Recruitment</a></li>
 						</ul>
 					</li>
 
 
 					<li><a href="contacts.html">Contacts</a></li>
+										<li><a>&nbsp;</a></li>
+					<li><a href="index.html"><i class="fa fa-home"></i></a></li>
+					<li><a href="https://www.facebook.com/bottega52/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+					<li><a href="https://www.linkedin.com/company/9300551" target="_blank"><i class="fa fa-linkedin"></i></a></li>
 	
 				</ul>
 			</div>
@@ -109,7 +113,7 @@
 	<!-- Navigation end -->
 
 	<!-- Home start -->
-	<section class="home-section home-parallax home-fade home-full-height bg-dark-60" data-background="images/img1-lo.jpg">
+	<section class="module bg-dark bg-dark-60" data-background="images/img1-lo.jpg">
 
 		<div class="hs-caption">
 			<div class="caption-content">
@@ -229,10 +233,10 @@
 						<div class="widget">
 							<h5 class="widget-title font-alt">Services</h5>
 							<ul class="icon-list">
-								<li><a href="service_infrastructure_engineering.html">Infrastructure Engineering</a></li>
-								<li><a href="service_backend_engineering.html">Backend Engineering</a></li>
-								<li><a href="service_frontend_engineering.html">Frontend Engineering</a></li>
-								<li><a href="service_mobile_engineering.html">Mobile Engineering</a></li>
+								<li><a href="services_infrastructure.html">Infrastructure Engineering</a></li>
+								<li><a href="services_backend.html">Backend Engineering</a></li>
+								<li><a href="services_frontend.html">Frontend Engineering</a></li>
+								<li><a href="services_mobile.html">Mobile Engineering</a></li>
 							</ul>
 						</div>
 						<!-- Widget end -->
@@ -247,7 +251,7 @@
 							<ul class="icon-list">
 								<li><a href="products_access_control.html">Access Control</a></li>
 								<li><a href="products_industry_4.html">Industry 4.0</a></li>
-								<li><a href="products_packaging_ar.html">Packaging AR</a></li>
+
 							</ul>
 						</div>
 						<!-- Widget end -->
@@ -260,8 +264,8 @@
 						<div class="widget">
 							<h5 class="widget-title font-alt">Company</h5>
 							<ul class="icon-list">
-								<li><a href="company_customer_portfolio.html">Customer Portfolio</a></li>
-								<li><a href="company_company_profile.html">Company Profile</a></li>
+								<li><a href="company_portfolio.html">Portfolio</a></li>
+								<li><a href="company_about.html">About</a></li>
 								<li><a href="company_company_recruitment.html">Recruitment</a></li>
 							</ul>
 						</div>
@@ -291,8 +295,8 @@
 	
 					<div class="col-sm-6">
 						<div class="footer-social-links">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-linkedin"></i></a>
+							<a href="https://www.facebook.com/bottega52/" target="_blank"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.linkedin.com/company/9300551" target="_blank"><i class="fa fa-linkedin"></i></a>
 						</div>
 					</div>
 	
