--- a/newsite/services_frontend.html
+++ b/newsite/services_frontend.html
@@ -12,6 +12,7 @@
 	<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link href="assets/css/simpletextrotator.css" rel="stylesheet">
 	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="assets/font-awesome-4.6.3/css/font-awesome.min.css">
 	<link href="assets/css/et-line-font.css" rel="stylesheet">
 	<link href="assets/css/magnific-popup.css" rel="stylesheet">
 	<link href="assets/css/flexslider.css" rel="stylesheet">
@@ -66,7 +67,7 @@
 						<ul class="dropdown-menu" role="menu">
 							<li><a href="products_access_control.html">Access Control</a></li>
 							<li><a href="products_industry_4.html">Industry 4.0</a></li>
-							<li><a href="products_packaging_ar.html">Packaging AR</a></li>
+
 						</ul>
 					</li>
 
@@ -80,7 +81,7 @@
 									<li><a href="company_portfolio_smart_supermarket.html">Smart SuperMarket</a></li>
 									<li><a href="company_portfolio_micropayments_charities.html">Micropayment app for charities</a></li>											
 									<li><a href="company_portfolio_smart_access_control.html">Smart Access Control System</a></li>
-									<li><a href="company_portfolio_warehouse_logistics_management.html">Warehouse logistic management software</a></li>
+									<li><a href="company_portfolio_warehouse_logistics_management.html">Warehouse logistic management SW</a></li>
 									<li><a href="company_portfolio_web_mobile_marketplace.html">Web & Mobile Marketplace</a></li>
 									<li><a href="company_portfolio_backend_big_data.html">Backend for BigData Analysis</a></li>
 									<li><a href="company_portfolio_realtime_mobile_voting.html">Realtime Mobile Voting System</a></li>
@@ -93,13 +94,17 @@
 									
 								</ul>
 							</li>
-							<li><a href="company_company_profile.html">Company Profile</a></li>
+							<li><a href="company_about.html">About</a></li>
 							<li><a href="company_company_recruitment.html">Recruitment</a></li>
 						</ul>
 					</li>
 
 
 					<li><a href="contacts.html">Contacts</a></li>
+										<li><a>&nbsp;</a></li>
+					<li><a href="index.html"><i class="fa fa-home"></i></a></li>
+					<li><a href="https://www.facebook.com/bottega52/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+					<li><a href="https://www.linkedin.com/company/9300551" target="_blank"><i class="fa fa-linkedin"></i></a></li>
 	
 				</ul>
 			</div>
@@ -120,9 +125,9 @@
 
 					<div class="col-sm-6 col-sm-offset-3">
 
-						<h1 class="module-title font-alt">Frontend Engineering</h1>
+						<h1 class="module-title font-alt">Frotend Engineering</h1>
 						<div class="module-subtitle font-serif mb-0">
-							Web frontend UX/UI  design, responsive interfaces, back-office interfaces and internet services
+							Web frontend UX/UI design, responsive interfaces, back-office interfaces and internet services
 						</div>
 
 					</div>
@@ -138,37 +143,61 @@
 			<div class="container">
 
 				<div class="row">
-					<div class="col-sm-2 "></div>
-					<div class="col-sm-8 ">
 
-						<h2 class="module-title font-alt">What we Do</h2>
+					<div class="col-sm-6 col-sm-offset-3">
 
-						<div class="font-serif large-text align-center">
-							<p>
-								We believe in reactive web applications which yield responsiveness, resilience and scalability. This way your service will be capable of handling any user on the globe, at virtually any spike without compromising their experience.
-							</p>
+						<h1 class="module-title font-alt">What you need</h1>
+						<div class="module-subtitle font-serif mb-0">
+							You are looking for effective interfaces for both your end users and your back office personnel. You are looking for solutions that will be compatible across multiple browsers; the investment that you are making must last for years to come.
 						</div>
 
 					</div>
-					<div class="col-sm-2 "></div>
+
 				</div><!-- .row -->
 
 				<br>
 				<br>
 				<br>
-				<br>
+
+
+				<!-- Divider -->
+				<hr class="divider-w">
+				<!-- Divider -->
+
 				<br>
 				<br>
 				<br>
 
 
 				<div class="row">
+
 					<div class="col-sm-6 col-sm-offset-3">
 
-						<h2 class="module-title font-alt">Technologies</h2>
-						<div class="module-subtitle font-serif">
-							A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.
+						<h1 class="module-title font-alt">What we do</h1>
+						<div class="module-subtitle font-serif mb-0">
+							We engineer, develop, deploy and maintain beautiful, usable, and effective multiplatform web frontends.
 						</div>
+
+					</div>
+
+				</div><!-- .row -->
+
+				<br>
+				<br>
+				<br>
+				<!-- Divider -->
+				<hr class="divider-w">
+				<!-- Divider -->	
+				<br>
+				<br>
+				<br>			
+
+
+
+				<div class="row">
+					<div class="col-sm-6 col-sm-offset-3">
+
+						<h2 class="module-title font-alt">Expertise</h2>
 
 					</div>
 
@@ -181,10 +210,10 @@
 
 						<div class="features-item">
 							<div class="features-icon">
-								<span class="icon-lightbulb"></span>
+								<i class="fa fa-user" aria-hidden="false"></i>
 							</div>
-							<h3 class="features-title font-alt">Ideas and concepts</h3>
-							Careful attention to detail and clean, well structured code ensures a smooth user experience for all your visitors.
+							<h3 class="features-title font-alt">User Experience (UX) and User Interfaces (UI)</h3>
+							UX and UI are core competencies that we exploit to deliver best in class frontend web solutions that are both usable and beautiful.
 						</div>
 
 					</div>
@@ -195,10 +224,25 @@
 
 						<div class="features-item">
 							<div class="features-icon">
-								<span class="icon-bike"></span>
+								<i class="fa fa-arrows" aria-hidden="false"></i>
 							</div>
-							<h3 class="features-title font-alt">Optimised for speed</h3>
-							Careful attention to detail and clean, well structured code ensures a smooth user experience for all your visitors.
+							<h3 class="features-title font-alt">RESTful</h3>
+							We are experts at designing both RESTful WOA and interfaces that consumes them. The resulting strong decoupling makes our interfaces easier to test, deploy, maintain, and upgrade when necessary.
+						</div>
+
+					</div>
+					<!-- Features end -->
+
+
+					<!-- Features start -->
+					<div class="col-sm-6 col-md-3 col-lg-3">
+
+						<div class="features-item">
+							<div class="features-icon">
+								<i class="fa fa-tachometer" aria-hidden="false"></i>
+							</div>
+							<h3 class="features-title font-alt">Performance</h3>
+							We apply our competences in terms of systems engineering also on the frontend side to build blazing fast interfaces. We leverage all kinds of optimizations: caching, lazy loading, paging, compression, minification, just name a few.
 						</div>
 
 					</div>
@@ -209,10 +253,11 @@
 
 						<div class="features-item">
 							<div class="features-icon">
-								<span class="icon-tools"></span>
+								<i class="fa fa-magic" aria-hidden="false"></i>
 							</div>
-							<h3 class="features-title font-alt">Designs & interfaces</h3>
-							Careful attention to detail and clean, well structured code ensures a smooth user experience for all your visitors.
+							<h3 class="features-title font-alt">Reactive Interfaces</h3>
+							We are pioneers in the adoption of reactive technologies like React and Functional Reactive Programming for Angular 2. 
+
 						</div>
 
 					</div>
@@ -223,10 +268,10 @@
 
 						<div class="features-item">
 							<div class="features-icon">
-								<span class="icon-gears"></span>
+								<i class="fa fa-cubes" aria-hidden="false"></i>
 							</div>
-							<h3 class="features-title font-alt">Highly customizable</h3>
-							Careful attention to detail and clean, well structured code ensures a smooth user experience for all your visitors.
+							<h3 class="features-title font-alt">Modular Interfaces</h3>
+							We develop our interfaces by developing and reusing a large codebase of well tested components, allowing us to both speed up the development time and deliver high quality interfaces.
 						</div>
 
 					</div>
@@ -237,10 +282,10 @@
 
 						<div class="features-item">
 							<div class="features-icon">
-								<span class="icon-tools-2"></span>
+								<i class="fa fa-code-fork" aria-hidden="false"></i>
 							</div>
-							<h3 class="features-title font-alt">Coding & development</h3>
-							Careful attention to detail and clean, well structured code ensures a smooth user experience for all your visitors.
+							<h3 class="features-title font-alt">Testing & Continuous Integration</h3>
+							No modern software system can do without a systematic approach to testing (before) during and after development. Thanks to our competences we effectively and systematically test and integrate our systems.
 						</div>
 
 					</div>
@@ -251,48 +296,168 @@
 
 						<div class="features-item">
 							<div class="features-icon">
-								<span class="icon-genius"></span>
+								<i class="fa fa-sort-amount-asc" aria-hidden="false"></i>
 							</div>
-							<h3 class="features-title font-alt">Features & plugins</h3>
-							Careful attention to detail and clean, well structured code ensures a smooth user experience for all your visitors.
+							<h3 class="features-title font-alt">Asynchronous Models of Communication</h3>
+							Your next web service/application is a distributed system, that intrinsically communicates in an asynchronous manner with its components. We are highly knowledgeable about the various models of communication that must be applied to deliver best in class frontend solutions.
 						</div>
 
 					</div>
-					<!-- Features end -->
+					<!-- Features end -->					
 
 					<!-- Features start -->
 					<div class="col-sm-6 col-md-3 col-lg-3">
 
 						<div class="features-item">
 							<div class="features-icon">
-								<span class="icon-mobile"></span>
+								<i class="fa fa-beer" aria-hidden="false"></i>
 							</div>
-							<h3 class="features-title font-alt">Responsive design</h3>
-							Careful attention to detail and clean, well structured code ensures a smooth user experience for all your visitors.
+							<h3 class="features-title font-alt">Agile Development/Fast Mockup Iteration</h3>
+							Frontend engineering can be a form of art, at times. Like every piece of art, it takes time and a trial-and-error approach to reach a mature state. We work side by side with our customers to rapidly iterate among various mockups to reduce the time between your idea and our result.
 						</div>
 
 					</div>
 					<!-- Features end -->
 
-					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
+				</div><!-- .row -->		
 
-						<div class="features-item">
-							<div class="features-icon">
-								<span class="icon-lifesaver"></span>
-							</div>
-							<h3 class="features-title font-alt">Dedicated support</h3>
-							Careful attention to detail and clean, well structured code ensures a smooth user experience for all your visitors.
-						</div>
+				<br>
+				<br>
+				<br>
+				<!-- Divider -->
+				<hr class="divider-w">
+				<!-- Divider -->	
+				<br>
+				<br>
+				<br>			
+
+
+
+				<div class="row">
+					<div class="col-sm-2 "></div>
+					<div class="col-sm-8 ">
+
+						<h2 class="module-title font-alt">Software Stack</h2>
 
 					</div>
-					<!-- Features end -->
+					<div class="col-sm-2 "></div>
+				</div><!-- .row -->
 
-				</div><!-- .row -->				
+
+				<div class="row multi-columns-row">
+
+					<!-- Gallery item start -->
+					<div class="col-sm-6 col-md-2 col-lg-2">
+						<div class="gallery-item">
+							<img src="images/html5-logo.png" alt="">
+						</div>
+					</div>
+					<!-- Gallery item end -->
+
+
+					<!-- Gallery item start -->
+					<div class="col-sm-6 col-md-2 col-lg-2">
+						<div class="gallery-item">
+							<img src="images/css3-logo.png" alt="">
+						</div>
+					</div>
+					<!-- Gallery item end -->
+
+					<!-- Gallery item start -->
+					<div class="col-sm-6 col-md-2 col-lg-2">
+						<div class="gallery-item">
+							<img src="images/javascript-logo.png" alt="">
+						</div>
+					</div>
+					<!-- Gallery item end -->						
+
+
+					<!-- Gallery item start -->
+					<div class="col-sm-6 col-md-2 col-lg-2">
+						<div class="gallery-item">
+							<img src="images/react-logo.png" alt="">
+						</div>
+					</div>
+					<!-- Gallery item end -->
+
+					<!-- Gallery item start -->
+					<div class="col-sm-6 col-md-2 col-lg-2">
+						<div class="gallery-item">
+							<img src="images/bower-logo.png" alt="">
+						</div>
+					</div>
+					<!-- Gallery item end -->	
+
+
+					<!-- Gallery item start -->
+					<div class="col-sm-6 col-md-2 col-lg-2">
+						<div class="gallery-item">
+							<img src="images/gulp-logo.png" alt="">
+						</div>
+					</div>
+					<!-- Gallery item end -->									
+
+				</div>
+
+				<br>
+				<br>
+				<br>
+
+				<div class="row multi-columns-row">
+
+
+					<!-- Gallery item start -->
+					<div class="col-sm-6 col-md-2 col-lg-2">
+						<div class="gallery-item">
+							<img src="images/angular-logo.png" alt="">
+						</div>
+					</div>
+					<!-- Gallery item end -->		
+
+
+					<!-- Gallery item start -->
+					<div class="col-sm-6 col-md-2 col-lg-2">
+						<div class="gallery-item">
+							<img src="images/bootstrap-logo.png" alt="">
+						</div>
+					</div>
+					<!-- Gallery item end -->					
+			
+
+					<!-- Gallery item start -->
+					<div class="col-sm-6 col-md-2 col-lg-2">
+						<div class="gallery-item">
+							<img src="images/jasmine-logo.png" alt="">
+						</div>
+					</div>
+					<!-- Gallery item end -->								
+
+					<!-- Gallery item start -->
+					<div class="col-sm-6 col-md-2 col-lg-2">
+						<div class="gallery-item">
+							<img src="images/grunt-logo.png" alt="">
+						</div>
+					</div>
+					<!-- Gallery item end -->			
+
+										<!-- Gallery item start -->
+					<div class="col-sm-6 col-md-2 col-lg-2">
+						<div class="gallery-item">
+							<img src="images/wordpress-logo.png" alt="">
+						</div>
+					</div>
+					<!-- Gallery item end -->			
+
+		
+
+
+				</div><!-- .row -->
 
 			</div><!-- .container -->
 		</section>
 		<!-- Features end -->		
+
+
 
 
 	
@@ -325,10 +490,10 @@
 						<div class="widget">
 							<h5 class="widget-title font-alt">Services</h5>
 							<ul class="icon-list">
-								<li><a href="service_infrastructure_engineering.html">Infrastructure Engineering</a></li>
-								<li><a href="service_backend_engineering.html">Backend Engineering</a></li>
-								<li><a href="service_frontend_engineering.html">Frontend Engineering</a></li>
-								<li><a href="service_mobile_engineering.html">Mobile Engineering</a></li>
+								<li><a href="services_infrastructure.html">Infrastructure Engineering</a></li>
+								<li><a href="services_backend.html">Backend Engineering</a></li>
+								<li><a href="services_frontend.html">Frontend Engineering</a></li>
+								<li><a href="services_mobile.html">Mobile Engineering</a></li>
 							</ul>
 						</div>
 						<!-- Widget end -->
@@ -343,7 +508,7 @@
 							<ul class="icon-list">
 								<li><a href="products_access_control.html">Access Control</a></li>
 								<li><a href="products_industry_4.html">Industry 4.0</a></li>
-								<li><a href="products_packaging_ar.html">Packaging AR</a></li>
+
 							</ul>
 						</div>
 						<!-- Widget end -->
@@ -356,8 +521,8 @@
 						<div class="widget">
 							<h5 class="widget-title font-alt">Company</h5>
 							<ul class="icon-list">
-								<li><a href="company_customer_portfolio.html">Customer Portfolio</a></li>
-								<li><a href="company_company_profile.html">Company Profile</a></li>
+								<li><a href="company_portfolio.html">Portfolio</a></li>
+								<li><a href="company_about.html">About</a></li>
 								<li><a href="company_company_recruitment.html">Recruitment</a></li>
 							</ul>
 						</div>
@@ -387,8 +552,8 @@
 	
 					<div class="col-sm-6">
 						<div class="footer-social-links">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-linkedin"></i></a>
+							<a href="https://www.facebook.com/bottega52/" target="_blank"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.linkedin.com/company/9300551" target="_blank"><i class="fa fa-linkedin"></i></a>
 						</div>
 					</div>
 	
