--- a/newsite/index.html
+++ b/newsite/index.html
@@ -76,7 +76,7 @@
 						<ul class="dropdown-menu" role="menu">
 							<li><a href="products_access_control.html">Access Control</a></li>
 							<li><a href="products_industry_4.html">Industry 4.0</a></li>
-							<li><a href="products_packaging_ar.html">Packaging AR</a></li>
+
 						</ul>
 					</li>
 
@@ -90,7 +90,7 @@
 									<li><a href="company_portfolio_smart_supermarket.html">Smart SuperMarket</a></li>
 									<li><a href="company_portfolio_micropayments_charities.html">Micropayment app for charities</a></li>											
 									<li><a href="company_portfolio_smart_access_control.html">Smart Access Control System</a></li>
-									<li><a href="company_portfolio_warehouse_logistics_management.html">Warehouse logistic management software</a></li>
+									<li><a href="company_portfolio_warehouse_logistics_management.html">Warehouse logistic management SW</a></li>
 									<li><a href="company_portfolio_web_mobile_marketplace.html">Web & Mobile Marketplace</a></li>
 									<li><a href="company_portfolio_backend_big_data.html">Backend for BigData Analysis</a></li>
 									<li><a href="company_portfolio_realtime_mobile_voting.html">Realtime Mobile Voting System</a></li>
@@ -103,13 +103,17 @@
 																
 								</ul>
 							</li>
-							<li><a href="company_company_profile.html">Company Profile</a></li>
+							<li><a href="company_about.html">About</a></li>
 							<li><a href="company_company_recruitment.html">Recruitment</a></li>
 						</ul>
 					</li>			
 
 					<li><a href="contacts.html">Contacts</a></li>
-	
+										<li><a>&nbsp;</a></li>
+					<li><a href="index.html"><i class="fa fa-home"></i></a></li>
+					<li><a href="https://www.facebook.com/bottega52/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+					<li><a href="https://www.linkedin.com/company/9300551" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+
 				</ul>
 			</div>
 	
@@ -385,7 +389,7 @@
 				<div class="row multi-columns-row">
 
 					<!-- Features start -->
-					<div class="col-sm-6 col-md-4 col-lg-4">
+					<div class="col-sm-6 col-md-6 col-lg-6">
 
 						<div class="features-item">
 							<div class="features-icon">
@@ -401,7 +405,7 @@
 					<!-- Features end -->
 
 					<!-- Features start -->
-					<div class="col-sm-6 col-md-4 col-lg-4">
+					<div class="col-sm-6 col-md-6 col-lg-6">
 
 						<div class="features-item">
 							<div class="features-icon">
@@ -412,22 +416,6 @@
 						</div>
 
 						<p align="center"><a href="products_industry_4.html" class="btn btn-d btn-round">Details</a></p>
-
-					</div>
-					<!-- Features end -->
-
-					<!-- Features start -->
-					<div class="col-sm-6 col-md-4 col-lg-4">
-
-						<div class="features-item">
-							<div class="features-icon">
-								<i class="fa fa-dropbox" aria-hidden="false"></i>
-							</div>
-							<h3 class="features-title font-alt">Packaging AR</h3>
-							We integrate cloud platforms and mobile applications to manage the Augmented Reality (AR) applied to the packaing industry: a revolution for the marketing world.
-						</div>
-
-						<p align="center"><a href="products_packaging_ar.html" class="btn btn-d btn-round">Details</a></p>
 
 					</div>
 					<!-- Features end -->
@@ -519,10 +507,10 @@
 						<div class="widget">
 							<h5 class="widget-title font-alt">Services</h5>
 							<ul class="icon-list">
-								<li><a href="service_infrastructure_engineering.html">Infrastructure Engineering</a></li>
-								<li><a href="service_backend_engineering.html">Backend Engineering</a></li>
-								<li><a href="service_frontend_engineering.html">Frontend Engineering</a></li>
-								<li><a href="service_mobile_engineering.html">Mobile Engineering</a></li>
+								<li><a href="services_infrastructure.html">Infrastructure Engineering</a></li>
+								<li><a href="services_backend.html">Backend Engineering</a></li>
+								<li><a href="services_frontend.html">Frontend Engineering</a></li>
+								<li><a href="services_mobile.html">Mobile Engineering</a></li>
 							</ul>
 						</div>
 						<!-- Widget end -->
@@ -537,7 +525,7 @@
 							<ul class="icon-list">
 								<li><a href="products_access_control.html">Access Control</a></li>
 								<li><a href="products_industry_4.html">Industry 4.0</a></li>
-								<li><a href="products_packaging_ar.html">Packaging AR</a></li>
+
 							</ul>
 						</div>
 						<!-- Widget end -->
@@ -550,8 +538,8 @@
 						<div class="widget">
 							<h5 class="widget-title font-alt">Company</h5>
 							<ul class="icon-list">
-								<li><a href="company_customer_portfolio.html">Customer Portfolio</a></li>
-								<li><a href="company_company_profile.html">Company Profile</a></li>
+								<li><a href="company_portfolio.html">Portfolio</a></li>
+								<li><a href="company_about.html">About</a></li>
 								<li><a href="company_company_recruitment.html">Recruitment</a></li>
 							</ul>
 						</div>
@@ -581,8 +569,8 @@
 	
 					<div class="col-sm-6">
 						<div class="footer-social-links">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-linkedin"></i></a>
+							<a href="https://www.facebook.com/bottega52/" target="_blank"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.linkedin.com/company/9300551" target="_blank"><i class="fa fa-linkedin"></i></a>
 						</div>
 					</div>
 	
