--- a/newsite/index.html
+++ b/newsite/index.html
@@ -268,7 +268,7 @@
 
 						<h2 class="module-title font-alt">Our Services</h2>
 						<div class="module-subtitle font-serif large-text">
-							As a software house and system integration in the Internet of Field market, we engineer all the components needed to create a full IoT system, from the infrastructure to the devices.
+							As a software house and system integrator in the Internet of Field market, we engineer all the components needed to create a full IoT system, from the infrastructure to the devices.
 						</div>
 
 					</div>
