--- a/newsite/services_backend.html
+++ b/newsite/services_backend.html
@@ -127,7 +127,7 @@
 
 						<h1 class="module-title font-alt">Backend Engineering</h1>
 						<div class="module-subtitle font-serif mb-0">
-							Design, creation and maintenance of scalable, reliable and secure cloud or on-premise infrastructures
+							We design, implement, deploy, and maintain scalable and secure distributed backend services systems for web, cloud and IoT applications
 						</div>
 
 					</div>
@@ -447,6 +447,14 @@
 					</div>
 					<!-- Gallery item end -->	
 
+
+					<!-- Gallery item start -->
+					<div class="col-sm-6 col-md-2 col-lg-2">
+						<div class="gallery-item">
+							<img src="images/swagger-logo.png" alt="">
+						</div>
+					</div>
+					<!-- Gallery item end -->	
 
 				</div><!-- .row -->
 
