--- a/newsite/services_mobile.html
+++ b/newsite/services_mobile.html
@@ -242,7 +242,7 @@
 								<i class="fa fa-tachometer" aria-hidden="false"></i>
 							</div>
 							<h3 class="features-title font-alt">Performance</h3>
-							We apply our competences in terms of systems engineering also on the frontend side to build blazing fast interfaces. We leverage all kinds of optimizations: caching, lazy loading, paging, compression, minification, just name a few.
+							We apply our competences in terms of systems engineering also on the frontend side to build blazing fast interfaces. We leverage all kinds of optimizations: caching, lazy loading, paging, compression, minification, just to name a few.
 						</div>
 
 					</div>
