--- a/newsite/company_about.html
+++ b/newsite/company_about.html
@@ -148,75 +148,19 @@
 						<h4 class="font-alt mb-0">BOTTEGA52 SRL</h4>
 						<hr class="divider-w mt-10 mb-20">
 
-						<p>Bottega52 is an Italian company funded in 2014 by Riccardo Cattaneo (CEO), Alessandro A. Nacci (COO) and Matteo Ferroni (CTO) with the mission of making real and actual the competencies acquired during the PhD in Computer Science and Engineering of the founders.</p>
+						<p>Bottega52 is an Italian company funded in 2014 by Riccardo Cattaneo (CEO), Alessandro A. Nacci (COO) and Matteo Ferroni (CTO) with the mission of making real and actual the competencies acquired during the PhD in Computer Science and Engineering of the founders. Today, Bottega52 SRL is on the market as Software House and System Integrator. The company designs, implements, deploys, and maintains software solutions to create Cloud based systems, Mobile apps and Internet of Things applications.</p>
 
-						<p>Today, Bottega52 SRL is on the market as Software House and System Integrator. The company designs, implements, deploys, and maintains software solutions to create Cloud based systems, Mobile apps and Internet of Things applications.</p>
-
-						<p>Turnover in 2015 was 70k€. Turnover in 2016 will be 300-350 k€. Forecasts for 2017 is about half million euros. In the most relevant projects, the team size has been of 4 people, with 6 months lenght projects.</p>
-
-						<br>
-
-						<h4 class="font-alt mb-0">Industrial Strategy</h4>
-						<hr class="divider-w mt-10 mb-20">
-
-						<p><b>Go-To-Market Strategy</b><br>Bottega52 engages customers by means of a direct and indirect go-to-market strategy.</p>
-
-						<div class="row">
-
-							<div class="col-sm-12">
-								<ul>
-									<li>Direct: we develop our business  by engaging leads generated through LinkedIn, fairs, and identification of relevant SMEs clusters.</li>
-									<li>Indirect:  we are frequently stimulated by opportunities from our professional network, past customers, and our business partners.</li>
-								</ul>
-							</div>
-
-						</div><!-- .row -->						
-
-
-						<p><b>Partnerships Strategy</b><br>Bottega52 engages in two kinds of industrial partnerships.</p>
-
-						<div class="row">
-
-							<div class="col-sm-12">
-								<ul>
-									<li>Equity based: we own shares of other companies; we serve their business goals by sharing our know-how and resources.</li>
-									<li>Non-equity based: we co-develop with third parties their software solutions and participate to a share of their profits.</li>
-								</ul>
-							</div>
-
-						</div><!-- .row -->						
-
-
-						<br>
-						<h4 class="font-alt mb-0">Industrial Group Structure and Partnerships</h4>
-						<hr class="divider-w mt-10 mb-20">
-
-
-						<div class="row">
-
-							<div class="col-sm-12">
-								<img src="images/bottega52-group-structure.png" width="100%"></img>
-							</div>
-
-						</div><!-- .row -->	
+						<p>Turnover in 2016 will be 300-350 k€. Forecasts for 2017 is about half million euros. In the most relevant projects, the team size has been of 4 people, with 6 months lenght projects.</p>
 
 						<br>
 						<br>
+						<br>
+
 						<h4 class="font-alt mb-0">Team: people working at Bottega52</h4>
 						<hr class="divider-w mt-10 mb-20">
 
 
 						<p>Our technical dev team is composed of Infrastructure, Backend, Frontend and Mobile engineers. Our technical resources are highly trained as they have multiple years of experience in design, development and maintenance of complex software systems matured under the guidance of senior engineers. They additionally are all holders of Master’s degrees in Computer Engineering from Politecnico di Milano. The company founders have a PhD in Computer Science; they have had multiple international experiences in Europe (London, Lausanne) and US (Chicago, San Diego and Berkeley).</p>
-
-						<br>
-
-						<div class="row">
-
-							<div class="col-sm-12">
-								<img src="images/team.png" width="100%"></img>
-							</div>
-
-						</div><!-- .row -->	
 
 
 					</div>
