--- a/newsite/company_portfolio_smart_supermarket.html
+++ b/newsite/company_portfolio_smart_supermarket.html
@@ -146,7 +146,7 @@
 							<br>
 							<h5 class="work-details-title font-alt">Project Details</h5>
 
-							<p>We prototyped an iBeacon based system (backend + app) to create a smart supermarket with realtime offers and indoor localisation. </p>
+							<p>We developed an iBeacon based system (backend + app) to create a smart supermarket with realtime offers and indoor localisation. </p>
 
 							<ul>
 								<li><strong>Industry:</strong><span class="font-serif"> IoT for the Retail Industry</span></li>
