--- a/newsite/products_industry_4.html
+++ b/newsite/products_industry_4.html
@@ -161,7 +161,7 @@
 							Introducing Astarte, the IoT Open platform for industry: packed with industrial-grade support, already deployed widely and completely customisable. Astarte allows you to implement your own IoT/Industry 4.0 solution while keeping you in control.
 							<br>
 							<br>
-							<a target="_blank" href="http://www.goastarte.com">Astarte</a>, is a product commercialized in partership with <a target="_blank" href="http://ispirata.com">Ispirata SRL</a>.
+							<a target="_blank" href="http://www.goastarte.com">Astarte</a>, is a product by <a target="_blank" href="http://ispirata.com">Ispirata SRL</a>, co-developed and commercialized in partership with Bottega52 SRL, which serves also as preferred system integrator.
 						</p>
 
 						<br>
