--- a/newsite/services_backend.html
+++ b/newsite/services_backend.html
@@ -148,7 +148,7 @@
 
 						<h1 class="module-title font-alt">What you need</h1>
 						<div class="module-subtitle font-serif mb-0">
-							A high quality software product: secure, robust, scalable. You also need a partner capable to share the knowledge required to effectively design, implement, deploy, and maintain such product: Bottega52 is here to help you.
+							A high quality software product: secure, robust, scalable. You also need a partner capable to share the knowledge required to effectively design, implement, deploy, and maintain such products: Bottega52 is here to help you.
 						</div>
 
 					</div>
@@ -175,7 +175,7 @@
 
 						<h1 class="module-title font-alt">What we do</h1>
 						<div class="module-subtitle font-serif mb-0">
-							We are experts at designing, implementing, deploying, and maintaining complex software systems.
+							We are experts at designing, implementing, deploying, and maintaining complex backend software systems.
 						</div>
 
 					</div>
@@ -285,7 +285,7 @@
 								<i class="fa fa-shield" aria-hidden="false"></i>
 							</div>
 							<h3 class="features-title font-alt">Security Assessments & Perfective Maintenance</h3>
-							Your product will be successful; your infrastructure must be proportionally scalable. We attain scalability by sophisticated infrastructure and software development.
+							We partner with market leaders in the computer security industry in order to routinely assess the security of our systems, pentest them, and correct security faults as the community discover then-unknown security issues.
 						</div>
 
 					</div>
@@ -313,7 +313,7 @@
 								<i class="fa fa-bullseye" aria-hidden="false"></i>
 							</div>
 							<h3 class="features-title font-alt">Defensive Programming</h3>
-							We partner with market leaders in the computer security industry in order to routinely assess the security of our systems, pentest them, and correct security faults as the community discover then-unknown security issues.
+							Security is a predominant concern for every business. We develop our systems using a defensive approach to minimize the risks associated to the exposure of our systems to a public network.
 						</div>
 
 					</div>
