--- a/newsite/services_infrastructure.html
+++ b/newsite/services_infrastructure.html
@@ -198,7 +198,7 @@
 				<div class="row">
 					<div class="col-sm-6 col-sm-offset-3">
 
-						<h2 class="module-title font-alt">Technologies</h2>
+						<h2 class="module-title font-alt">Expertise</h2>
 
 					</div>
 
@@ -228,7 +228,7 @@
 								<i class="fa fa-server" aria-hidden="false"></i>
 							</div>
 							<h3 class="features-title font-alt">On-Premise</h3>
-							Costs, privacy, and security are very decision makers’ concerns. We are here to assist you in designing, develop, deploy, and maintain private cloud/on premise infrastructures.
+							Costs, privacy, and security are every decision makers’ concerns. We are here to assist you in designing, develop, deploy, and maintain private cloud/on premise infrastructures.
 						</div>
 
 					</div>
