--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 					
 
 						<div class="callout-text font-alt" align="center">
-							<h3 class="callout-title">Quality means do it right when no one is looking.</h3>
+							<h3 class="callout-title">Quality means doing it right when no one is looking.</h3>
 							- Henry Ford -
 						</div>
 
