--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
 						<h2 class="module-title font-alt">Our Services</h2>
 						<div class="module-subtitle font-serif large-text">
-							As a software house and system integrator in the Internet of Things market, we engineer all the components needed to create a full IoT system, from the infrastructure to the devices.
+							As a software house and system integrator we engineer all the software components required to deliver complex, robust, and scalable distributed systems.
 						</div>
 
 					</div>
