--- a/index.html
+++ b/index.html
@@ -449,6 +449,7 @@
 
 						<div class="callout-text font-alt">
 							<h3 class="callout-title">Contact us.</h3>
+							<h3 class="callout-title">We will be more than happy to assist you.</h3>
 						</div>
 
 					</div>
