--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	
-	<title>Bottega52 - Mobile, Cloud and IoT Engineering - Crafting your next big thing</title>
+	<title>Bottega52 - IoT, Cloud and Mobile Engineering - Crafting your next big thing</title>
 	
 	<!-- CSS -->
 	<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -135,7 +135,7 @@
 							<br>
 							<br>
 							<div class="hs-title-size-2 font-alt mb-30">
-								Mobile, Cloud and IoT Engineering
+								IoT, Cloud and Mobile Engineering
 							</div>
 							<p class="font-serif large-text align-center">Crafting your next big thing</p>
 						</div>
@@ -149,7 +149,7 @@
 							<br>
 							<br>
 							<div class="hs-title-size-2 font-alt mb-30">
-								Mobile, Cloud and IoT Engineering
+								IoT, Cloud and Mobile Engineering
 							</div>
 							<p class="font-serif large-text align-center">Crafting your next big thing</p>
 						</div>
@@ -163,7 +163,7 @@
 							<br>
 							<br>
 							<div class="hs-title-size-2 font-alt mb-30">
-								Mobile, Cloud and IoT Engineering
+								IoT, Cloud and Mobile Engineering
 							</div>
 							<p class="font-serif large-text align-center">Crafting your next big thing</p>
 						</div>
