--- a/company_portfolio_cloud_packaging_ar.html
+++ b/company_portfolio_cloud_packaging_ar.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	
-	<title>Rival - Multipurpose Template</title>
+	<title>Bottega52 - IoT, Cloud and Mobile Engineering - Crafting your next big thing</title>
 	
 	<!-- CSS -->
 	<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
