--- a/services_infrastructure.html
+++ b/services_infrastructure.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	
-	<title>Bottega52 - Mobile, Cloud and IoT Engineering - Crafting your next big thing</title>
+	<title>Bottega52 - IoT, Cloud and Mobile Engineering - Crafting your next big thing</title>
 	
 	<!-- CSS -->
 	<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
