--- a/company_about.html
+++ b/company_about.html
@@ -126,7 +126,7 @@
 
 						<h1 class="module-title font-alt">Company Profile</h1>
 						<div class="module-subtitle font-serif mb-0">
-							A couple of information about our history, and mission and our structure.
+							A couple information about our history, and mission and our structure.
 						</div>
 
 					</div>
@@ -148,7 +148,7 @@
 						<h4 class="font-alt mb-0">BOTTEGA52 SRL</h4>
 						<hr class="divider-w mt-10 mb-20">
 
-						<p>Bottega52 is an Italian company funded in 2014 by Riccardo Cattaneo (CEO), Alessandro A. Nacci (COO) and Matteo Ferroni (CTO) with the mission of making real and actual the competencies acquired during the PhD in Computer Science and Engineering of the founders. Today, Bottega52 SRL is on the market as Software House and System Integrator. The company designs, implements, deploys, and maintains software solutions to create Cloud based systems, Mobile apps and Internet of Things applications.</p>
+						<p>Bottega52 is an Italian company founded in 2014 by Riccardo Cattaneo (CEO), Alessandro A. Nacci (COO) and Matteo Ferroni (CTO) with the mission of making real and actual the competencies acquired during the PhD in Computer Science and Engineering of the founders. Today, Bottega52 SRL is on the market as Software House and System Integrator. The company designs, implements, deploys, and maintains software solutions to create Cloud based systems, Mobile apps and Internet of Things applications.</p>
 
 						<p>Turnover in 2016 will be 300-350 k€. Forecasts for 2017 is about half million euros. In the most relevant projects, the team size has been of 4 people, with 6 months lenght projects.</p>
 
