--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 								<i class="fa fa-unlock-alt" aria-hidden="false"></i>
 							</div>
 							<h3 class="features-title font-alt">Access Control</h3>
-							We integrate the smart access control systems provided by Sofia SRL: wire-free and smartphone based, for IoT-generation-ready of door control.
+							We integrate Sofia SRL's smart access control system, wire-free and smartphone based, for IoT-generation-ready of door control.
 						</div>
 
 						<p align="center"><a href="products_access_control.html" class="btn btn-d btn-round">Details</a></p>
