--- a/ilmiosupereroe/payments/ippolito/index.html
+++ b/ilmiosupereroe/payments/ippolito/index.html
@@ -10,7 +10,7 @@ function startNow() {
 }
 </script>
 
-<body onload="startNow();">
+<body>
 <form name="myform" action="https://live.adyen.com/hpp/pay.shtml" method="POST">
 <div align="center">
 <input type="hidden" name="currencyCode" value="EUR">
