--- a/ilmiosupereroe/payments/ippolito/index.html
+++ b/ilmiosupereroe/payments/ippolito/index.html
@@ -15,7 +15,7 @@ function startNow() {
 <div align="center">
 <input type="hidden" name="currencyCode" value="EUR">
 <input type="hidden" name="merchantAccount" value="DigitalHeroesSrLIT">
-<input type="hidden" name="merchantReference" value="SKINTEST-1479733607845v">
+<input type="hidden" name="merchantReference" value="SKINTEST-1479733607845">
 <input type="hidden" name="merchantSig" value="zPSdIYqNB/Bk7eRWEHMKqBD9akfsVq/PDtrptYp8UVA=">
 <input type="hidden" name="paymentAmount" value="5">
 <input type="hidden" name="recurringContract" value="">
